# MarioProject

./: CMakeLists.txt  README.md  README.txt
src/: Character.cpp  Character.h  Clock.cpp  Clock.h  Finish.h  Lever.h  MainScene.cpp  MainScene.h  MainWindow.cpp  MainWindow.h  Plateforme.cpp  Plateforme.h  WelcomeWindow.cpp  WelcomeWindow.h  endWindow.cpp  endWindow.h  main.cpp  scoreboard.txt
